--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -18,6 +18,9 @@
     padding-top: 5rem;
 }
 
+.this-is-a-for-larger-screens-alert{
+    margin-top: 3rem;
+}
 .wee-margin-top{
     margin-top: 3rem;
 }
