--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -69,6 +69,10 @@
                                     <a class="btn btn-outline-primary btn-block" role="button" href="/">Home</a>
                                 </li>
                             </div>
+                            <li class="nav-item nav-login-button-dashboard in-app-menu-medium-and-up">
+                                <a class="btn btn-sm btn-info btn-block" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+                                    My Classes</a>
+                            </li>
                         </div>
 
                     </ul>
